[package]
name = "slash"
version = "0.1.0"
authors = ["mikkeldamsgaard <krulimut@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
duct = "0.13.5"
lazy_static = "1.4.0"

[dev-dependencies]
gag = "0.1.10"
tempfile = "3.2.0"